# zmpi

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  zmpi.c  zmpi.h
t/: Makefile.am  unittest.c
